crates/keron-lang/tests/corpus/errors/check/secret_in_interpolation.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: cannot interpolate a `Secret` directly; call `unwrap_secret(...)` to opt into a String first
  --> 3:32
  |
3 | val leaked: String = "bearer=${token}"
  |                                ^^^^^
